syntax="proto3";

package vehicleservice;
option go_package = "github.com/aksanart/vehicle/contract";

service VehicleService {
  rpc HealthCheck(EmptyRequest) returns (DefaultResponse);
  rpc CreateVehicle(CreateVehicleReq) returns (CreateVehicleResponse);
  rpc UpdateVehicle(UpdateVehicleReq) returns (DefaultResponse);
  rpc ListVehicle(ListVehicleReq) returns (ListVehicleResponse);
  rpc DetailVehicle(IDVehicleReq) returns (DetailVehicleResponse);
  rpc DeleteVehicle(IDVehicleReq) returns (DefaultResponse);
}

message EmptyRequest{
}

message DefaultResponse {
  int32 code = 1;
  string message = 2;
}

message CreateVehicleReq{
  string vehicle_name=1;
  string vehicle_model=2;
  string vehicle_status=3;
  int32 mileage=4;
  string license_number=5;
}

message UpdateVehicleReq{
  string id=1;
  string vehicle_name=2;
  string vehicle_model=3;
  string vehicle_status=4;
  int32 mileage=5;
  string license_number=6;
}

message ListVehicleResponse{
  message Data{
    string id=1;
    string vehicle_name=2;
    string vehicle_model=3;
    string vehicle_status=4;
    int32 mileage=5;
    string license_number=6;
  }
  int32 code=1;
  string message=2;
  repeated Data data=3;
}

message DetailVehicleResponse{
  message Data{
    string id=1;
    string vehicle_name=2;
    string vehicle_model=3;
    string vehicle_status=4;
    int32 mileage=5;
    string license_number=6;
  }
  int32 code=1;
  string message=2;
  Data data=3;
}

message IDVehicleReq{
  string id=1;
}

message CreateVehicleResponse{
  message Data{
    string id=1;
  }
  int32 code=1;
  string message=2;
  Data data=3;
}

message ListVehicleReq{
  int32 offest=1;
}